monticore-generator/src/test/resources/cocos/invalid/A4011/A4011a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4011;

grammar A4011a {
  A;

  B;

  C extends A, B;

}
